[package]
name = "wikinet"
version = "0.0.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Follow the first link on Wikipedia till you reach philosophy"
license = "MIT"
edition = "2018"
repository = "https://github.com/FedericoStra/wikinet"
keywords = ["Wikipedia", "web-scraping"]
categories = ["command-line-utilities", "web-programming", "text-processing", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
html5ever = "0.25.1"
lazy_static = "1.4.0"
markup5ever_rcdom = "0.1.0"
owning_ref = "0.4.1"
# log = "0.4.14"
reqwest = "0.11.4"
scraper = "0.12.0"
soup = "0.5.1"
structopt = "0.3.22"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
url = "2.2.2"

[package.metadata.release]
no-dev-version = true
